--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="{{ site.lang | default: "en-US" }}">
 <head>
@@ -8,8 +9,7 @@
   <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
   <script src="{{ '/assets/js/script.js' | relative_url }}"></script>
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon.ico">
-  
+
   {% seo %}
   {% if site.google_analytics and jekyll.environment == 'production' %}
   <script>
@@ -28,7 +28,7 @@
   <div class="wrapper">
     <header>
         <div class="inner">
-			<h1 class="title" >{{ site.title | default: site.github.repository_name }}</h1>
+			<h1 class="title">{{ site.title | default: site.github.repository_name }}</h1>
 		</div>
     </header>
     <div id="container">
@@ -46,15 +46,19 @@
         <span class="blc"></span><span class="trc"></span>
         </div>
         <article class="markdown-body">
-          {{ content }}
-		  
-		  {% for post in site.posts %}
-      <h2><a href="{{ post.url }}">{{ post.title }}</a> </h2>
-      <h4>{{ post.date | date: '%B %d, %Y' }}</h4>
-			  <p>{{ post.excerpt }}</p>
-			
-		  {% endfor %}
-		
+
+			<article class="post">
+
+			  <header class="post-header">
+        <h1 class="post-title">{{ page.title | escape }}</h1>
+        <h5>{{ page.date | date: '%B %d, %Y' }}</h5>
+			  </header>
+
+			  <div class="post-content">
+				{{ content }}
+			  </div>
+
+			</article>
         </article>
       </div>
     </div>
@@ -63,15 +67,15 @@
         <p><a href="{{ site.github.owner_url }}" class="avatar"><img src="{{ site.github.owner_gravatar_url }}" width="56" height="56"></a></p> <p margin-bottom=-1em; align=center>Experience is valuable only if it's imbued with meaning from which one can draw salient conclusions. Otherwise, experience becomes imprisoning - <i>Barry McCaffrey</i></p>
       </div>
       <div class="social-links">
-			{%- assign social = site.social_links -%}
-			<ul class="social-media-list">
-			  {%- if social.github -%}<li><a href="https://github.com/{{ social.github | cgi_escape | escape }}" title="{{ social.github | escape }}"><img src="{{ '/assets/github.png' | relative_url }}" height="50" width="50"></a></li>{%- endif -%}
-			  {%- if social.linkedin -%}<li><a href="https://www.linkedin.com/in/{{ social.linkedin | cgi_escape | escape }}" title="{{ social.linkedin | escape }}"><img src="{{ '/assets/linkedin.png' | relative_url }}" height="50" width="50"></a></li>{%- endif -%}
-			  {%- if social.hackerone -%}<li><a href="https://hackerone.com/{{ social.hackerone | cgi_escape | escape }}" title="{{ social.hackerone | escape }}"><img src="{{ '/assets/hacker1.png' | relative_url }}" height="50" width="50"></a></li>{%- endif -%}
-        {%- if social.twitter -%}<li><a href="https://twitter.com/{{ social.twitter | cgi_escape | escape }}" title="{{ social.twitter | escape }}"><img src="{{ '/assets/twitter.png' | relative_url }}" height="50" width="50"></a></li>{%- endif -%}
-        {%- if social.rss -%}<li><a href="{{ 'feed.xml' | relative_url }}" title="{{ social.rss | escape }}"><img src="{{ '/assets/rss.png' | relative_url }}" height="50" width="50"></a></li>{%- endif -%}
-			</ul>
-	  </div>
+        {%- assign social = site.social_links -%}
+        <ul class="social-media-list">
+          {%- if social.github -%}<li><a href="https://github.com/{{ social.github | cgi_escape | escape }}" title="{{ social.github | escape }}"><img src="{{ '/assets/github.png' | relative_url }}" height="50" width="50"></a></li>{%- endif -%}
+          {%- if social.linkedin -%}<li><a href="https://www.linkedin.com/in/{{ social.linkedin | cgi_escape | escape }}" title="{{ social.linkedin | escape }}"><img src="{{ '/assets/linkedin.png' | relative_url }}" height="50" width="50"></a></li>{%- endif -%}
+          {%- if social.hackerone -%}<li><a href="https://hackerone.com/{{ social.hackerone | cgi_escape | escape }}" title="{{ social.hackerone | escape }}"><img src="{{ '/assets/hacker1.png' | relative_url }}" height="50" width="50"></a></li>{%- endif -%}
+          {%- if social.twitter -%}<li><a href="https://twitter.com/{{ social.twitter | cgi_escape | escape }}" title="{{ social.twitter | escape }}"><img src="{{ '/assets/twitter.png' | relative_url }}" height="50" width="50"></a></li>{%- endif -%}
+          {%- if social.rss -%}<li><a href="{{ 'feed.xml' | relative_url }}" title="{{ social.rss | escape }}"><img src="{{ '/assets/rss.png' | relative_url }}" height="50" width="50"></a></li>{%- endif -%}
+        </ul>
+      </div>
     </footer>
   </div>
   <div class="current-section">
