--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -1,74 +1,138 @@
-<!doctype html>
-<html lang="{{ site.lang | default: "en-US" }}">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  
-  <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-  <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
-  <script src="{{ '/assets/js/script.js' | relative_url }}"></script>
+---
+layout: default
+---
+<div class="container-fluid single">
+  <div class="row">
 
-  {% seo %}
-  {% if site.google_analytics and jekyll.environment == 'production' %}
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    ga('create', '{{ site.google_analytics }}', 'auto');
-    ga('send', 'pageview');
-  </script>
-  {% endif %}
-</head>
+    <div itemscope itemtype="http://schema.org/Article" class="col-md-12 article">
+      <h1 class="header" itemprop="name">{{ page.title }}</h1>
+      <div class="content-panel content">
 
-<body>
+        {% if page.series %}
+          This post is part of the series '{{ page.series }}':
+          <ol class="series">
+          {% for apost in site.posts reversed %}
+            {% if page.series == apost.series %}
+              <li>
+                {% if page.title == apost.title %}
+                  {% assign nextpost = true %}
+                  {{ apost.title }}
+                {% else %}
+                  {% if nextpost == true %}
+                    {% assign seriesnext = apost %}
+                  {% endif %}
+                  {% assign nextpost = false %}
+                  <a href="{{ apost.url }}">{{ apost.title }}</a>
+                {% endif %}
+              </li>
+            {% endif %}
+          {% endfor %}
+          </ol>
+        {% endif %}
 
-  <div class="wrapper">
-    <header>
-        <div class="inner">
-			<h1 class="title">{{ site.title | default: site.github.repository_name }}</h1>
-		</div>
-    </header>
-    <div id="container">
-		<div>
-		<p class="tagline" align=center>{{ site.description | default: site.github.project_tagline }}</p>
-		</div>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-			  <a class="code"  href="{{ site.home.url | relative_url}}">{{ site.home.title | escape }}</a>
-			  <a class="page-link" href="{{ site.about.url | relative_url }}">{{ site.about.title | escape }}</a>
-			  <a class="page-link" href="{{ site.archive.url | relative_url }}">{{ site.archive.title | escape }}</a>
-			  
+        <span itemprop="articleBody">{{ content }}</span>
+
+        {% if page.series %}
+          {% if seriesnext %}
+            <i>Next post in the series:</i> <a href="{{ seriesnext.url }}">{{ seriesnext.title }}</a>
+          {% endif %}
+        {% endif %}
+
+        {% if site.addthis_id %}
+        <div class="share">
+          <!-- Go to www.addthis.com/dashboard to customize your tools -->
+          <div class="addthis_sharing_toolbox"></div>
         </div>
-        <span class="blc"></span><span class="trc"></span>
+        {% endif %}
+
+        {% if page.tags and page.tags.size > 0 %}
+        <div class="tags">
+          <small>
+          <i class="fa fa-tags"></i>
+            {{ page.tags | join: ', ' }}
+          </small>
         </div>
-        <article class="markdown-body1">
-          {{ content }}
-        </article>
+        {% endif %}
+
       </div>
+
+      {% if site.twitter_username and site.disqus_account %}
+      <div class="content-panel feedback">
+        Feel free to reach out to me at <a href="http://www.twitter.com/{{ site.twitter_username }}">@{{ site.twitter_username }}</a> or leave a comment below!
+      </div>
+      {% elsif site.twitter_username %}
+      <div class="content-panel feedback">
+        Feel free to reach out to me at <a href="http://www.twitter.com/{{ site.twitter_username }}">@{{ site.twitter_username }}</a>!
+      </div>
+      {% elsif site.disqus_account %}
+      <div class="content-panel feedback">
+        Feel free to reach out to me below!
+      </div>
+      {% endif %}
+
+      {% if site.disqus_account %}
+      <div class="content-panel comments">
+        <div id="disqus_thread">
+          <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+          <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+        </div>
+      </div>
+      {% endif %}
+
+      {% if site.related_posts.length > 0 %}
+      <div class="content-panel related clearfix">
+        {% for post in site.related_posts limit:1 %}
+        <div class="related-header">
+          <a href="{{ site.baseurl }}{{ post.url }}">Read More</a>
+        </div>
+          <div class="title">
+            <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
+          </div>
+          <div class="excerpt">
+             {% if post.summary %}
+              {{ post.summary | strip_html | truncatewords:30 }}
+             {% else %}
+              {{ post.excerpt | strip_html | truncatewords:30 }}
+             {% endif %}
+            <a href="{{ site.baseurl }}{{ post.url }}">Continue Reading</a>
+          </div>
+        {% endfor %}
+        <hr />
+        <div class="previous previous-next">
+          {% if page.previous %}
+          <p>
+            <a href="{{ site.baseurl }}{{ page.previous.url }}">{{ page.previous.title }}</a>
+          </p>
+          <p class="date">Published {{ page.previous.date | date: "%B %-d, %Y" }}</p>
+          {% endif %}
+        </div>
+        <div class="next previous-next">
+          {% if page.next %}
+          <p>
+            <a href="{{ site.baseurl }}{{ page.next.url }}">{{ page.next.title }}</a>
+          </p>
+          <p class="date">Published {{ page.next.date | date: "%B %-d, %Y" }}</p>
+          {% endif %}
+        </div>
+      </div>
+      {% endif %}
+
     </div>
-    <footer>
-      <div class="owner">
-        <p><a href="{{ site.github.owner_url }}" class="avatar"><img src="{{ site.github.owner_gravatar_url }}" width="56" height="56"></a></p> <p margin-bottom=-1em; align=center>Experience is valuable only if it's imbued with meaning from which one can draw salient conclusions. Otherwise, experience becomes imprisoning - <i>Barry McCaffrey</i></p>
-      </div>
-	  <div class="social-links">
-			{%- assign social = site.social_links -%}
-			<ul class="social-media-list">
-			  {%- if social.github -%}<li><a href="https://github.com/{{ social.github | cgi_escape | escape }}" title="{{ social.github | escape }}"><img src="{{ '/assets/github.png' | relative_url }}" height="50" width="50"></a></li>{%- endif -%}
-			  {%- if social.linkedin -%}<li><a href="https://www.linkedin.com/in/{{ social.linkedin | cgi_escape | escape }}" title="{{ social.linkedin | escape }}"><img src="{{ '/assets/linkedin.png' | relative_url }}" height="50" width="50"></a></li>{%- endif -%}
-			  {%- if social.hackerone -%}<li><a href="https://hackerone.com/{{ social.hackerone | cgi_escape | escape }}" title="{{ social.hackerone | escape }}"><img src="{{ '/assets/hacker1.png' | relative_url }}" height="50" width="50"></a></li>{%- endif -%}
-        {%- if social.twitter -%}<li><a href="https://twitter.com/{{ social.twitter | cgi_escape | escape }}" title="{{ social.twitter | escape }}"><img src="{{ '/assets/twitter.png' | relative_url }}" height="50" width="50"></a></li>{%- endif -%}
-        {%- if social.rss -%}<li><a href="{{ 'feed.xml' | relative_url }}" title="{{ social.rss | escape }}"><img src="{{ '/assets/rss.png' | relative_url }}" height="50" width="50"></a></li>{%- endif -%}
-			</ul>
-	  </div>
-    </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <p class="name"></p>
+
   </div>
 
-</body>
-</html>
+</div>
+
+{% if site.disqus_account %}
+<script type="text/javascript">
+/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+function disqus_config() { this.experiment.enable_scroll_container = true; }
+var disqus_shortname = "{{ site.disqus_account }}"; // required: replace example with your forum shortname
+/* * * DON'T EDIT BELOW THIS LINE * * */
+(function() {
+  var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+  dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+  (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+})();
+</script>
+{% endif %}
