Added Fontello hackerone glyph and modified social link

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,8 @@
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" media="all" href="{{ site.baseurl }}/css/style.css" />
 <link rel="stylesheet" type="text/css" media="all" href="{{ site.baseurl }}/css/jquery.mmenu.all.css" />
-<link rel="stylesheet" href="{{ site.baseurl }}/css/highlightjs.piperita.css">
+<link rel="stylesheet" href="/highlightjs.piperita.css">
+<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/fontello.css" />
 
 <!-- Favicons generated at http://realfavicongenerator.net/ -->
 <link rel="apple-touch-icon" sizes="57x57" href="{{ site.baseurl }}/favicons/apple-touch-icon-57x57.png">
