--- a/css/style.scss
+++ b/css/style.scss
@@ -197,8 +197,8 @@ ul {
 		color: $google-plus;
 	}
 	
-	.fa-square-o:hover {
-		color: $facebook;
+	.icon-hackerone:hover {
+		color: $dark-green;
 	}
 
 	.fa-github:hover {
