--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
 <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/fontello.css" />
 
 <!-- Favicons generated at http://realfavicongenerator.net/ -->
-<link rel="apple-touch-icon" sizes="57x57" href="{{ site.baseurl }}/favicons/apple-touch-icon-57x57.png">
+<!--<link rel="apple-touch-icon" sizes="57x57" href="{{ site.baseurl }}/favicons/apple-touch-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="{{ site.baseurl }}/favicons/apple-touch-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="{{ site.baseurl }}/favicons/apple-touch-icon-72x72.png">
 <link rel="apple-touch-icon" sizes="76x76" href="{{ site.baseurl }}/favicons/apple-touch-icon-76x76.png">
@@ -25,12 +25,23 @@
 <link rel="icon" type="image/png" href="{{ site.baseurl }}/favicons/android-chrome-192x192.png" sizes="192x192">
 <link rel="icon" type="image/png" href="{{ site.baseurl }}/favicons/favicon-96x96.png" sizes="96x96">
 <link rel="icon" type="image/png" href="{{ site.baseurl }}/favicons/favicon-16x16.png" sizes="16x16">
-<link rel="manifest" href="{{ site.baseurl }}/favicons/manifest.json">
-<link rel="shortcut icon" href="{{ site.baseurl }}/favicons/favicon.ico">
-<meta name="msapplication-TileColor" content="#da532c">
+<link rel="manifest" href="{{ site.baseurl }}/favicons/site.webmanifest">
+
+<meta name="msapplication-TileColor" content="#00a300">
 <meta name="msapplication-TileImage" content="{{ site.baseurl }}/favicons/mstile-144x144.png">
 <meta name="msapplication-config" content="{{ site.baseurl }}/favicons/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
+<link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#5bbad5">-->
+
+<link rel="shortcut icon" href="{{ site.baseurl }}/favicons/favicon.ico">
+<link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/favicon-16x16.png">
+<link rel="manifest" href="{{ site.baseurl }}/site.webmanifest">
+<link rel="mask-icon" href="{{ site.baseurl }}/safari-pinned-tab.svg" color="#5bbad5">
+<meta name="msapplication-TileColor" content="#00a300">
+<meta name="theme-color" content="#ffffff">
+
 
 {% if site.addthis_id %}
 <!-- Go to www.addthis.com/dashboard to customize your tools -->
