--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,7 +26,6 @@
 <link rel="icon" type="image/png" href="{{ site.baseurl }}/favicons/favicon-96x96.png" sizes="96x96">
 <link rel="icon" type="image/png" href="{{ site.baseurl }}/favicons/favicon-16x16.png" sizes="16x16">
 <link rel="manifest" href="{{ site.baseurl }}/favicons/site.webmanifest">
-
 <meta name="msapplication-TileColor" content="#00a300">
 <meta name="msapplication-TileImage" content="{{ site.baseurl }}/favicons/mstile-144x144.png">
 <meta name="msapplication-config" content="{{ site.baseurl }}/favicons/browserconfig.xml">
@@ -34,10 +33,11 @@
 <link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#5bbad5">-->
 
 <link rel="shortcut icon" href="{{ site.baseurl }}/favicons/favicon.ico">
-<link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/favicon-16x16.png">
-<link rel="manifest" href="{{ site.baseurl }}/site.webmanifest">
+<link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/favicons/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/favicons/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/favicons/favicon-16x16.png">
+<link rel="manifest" href="{{ site.baseurl }}/favicons/site.webmanifest">
+<meta name="msapplication-config" content="{{ site.baseurl }}/favicons/browserconfig.xml">
 <link rel="mask-icon" href="{{ site.baseurl }}/safari-pinned-tab.svg" color="#5bbad5">
 <meta name="msapplication-TileColor" content="#00a300">
 <meta name="theme-color" content="#ffffff">
