--- a/_includes/head.html
+++ b/_includes/head.html
@@ -38,7 +38,7 @@
 <link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/favicons/favicon-16x16.png">
 <link rel="manifest" href="{{ site.baseurl }}/favicons/site.webmanifest">
 <meta name="msapplication-config" content="{{ site.baseurl }}/favicons/browserconfig.xml">
-<link rel="mask-icon" href="{{ site.baseurl }}/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="mask-icon" href="{{ site.baseurl }}/favicons/safari-pinned-tab.svg" color="#5bbad5">
 <meta name="msapplication-TileColor" content="#00a300">
 <meta name="theme-color" content="#ffffff">
 
