--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,7 +22,7 @@
 <link rel="apple-touch-icon" sizes="152x152" href="{{ site.baseurl }}/favicons/apple-touch-icon-152x152.png">
 <link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/favicons/apple-touch-icon-180x180.png">
 <link rel="icon" type="image/png" href="{{ site.baseurl }}/favicons/favicon-32x32.png" sizes="32x32">
-<link rel="icon" type="image/png" href="{{ site.baseurl }}/favicons/android-chrome-192x192.png" sizes="192x192">
+
 <link rel="icon" type="image/png" href="{{ site.baseurl }}/favicons/favicon-96x96.png" sizes="96x96">
 <link rel="icon" type="image/png" href="{{ site.baseurl }}/favicons/favicon-16x16.png" sizes="16x16">
 <link rel="manifest" href="{{ site.baseurl }}/favicons/site.webmanifest">
@@ -36,9 +36,13 @@
 <link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/favicons/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/favicons/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/favicons/favicon-16x16.png">
+<link rel="icon" type="image/png" href="{{ site.baseurl }}/favicons/android-chrome-192x192.png" sizes="192x192">
+<link rel="icon" type="image/png" href="{{ site.baseurl }}/favicons/android-chrome-512x512.png" sizes="512x512">
 <link rel="manifest" href="{{ site.baseurl }}/favicons/site.webmanifest">
 <meta name="msapplication-config" content="{{ site.baseurl }}/favicons/browserconfig.xml">
+<meta name="msapplication-TileImage" content="{{ site.baseurl }}/favicons/mstile-150x150.png">
 <link rel="mask-icon" href="{{ site.baseurl }}/favicons/safari-pinned-tab.svg" color="#5bbad5">
+
 <meta name="msapplication-TileColor" content="#00a300">
 <meta name="theme-color" content="#ffffff">
 
