--- a/_includes/head.html
+++ b/_includes/head.html
@@ -57,4 +57,13 @@
 <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 {% endif %}
 
+<!-- Cookie Consent by https://www.PrivacyPolicies.com -->
+<script type="text/javascript" src="//www.privacypolicies.com/public/cookie-consent/3.0.0/cookie-consent.js"></script>
+<script type="text/javascript">
+document.addEventListener('DOMContentLoaded', function () {
+cookieconsent.run({"notice_banner_type":"headline","consent_type":"express","palette":"dark","language":"en","website_name":"https://padraignix.github.io"});
+});
+</script>
+<noscript><a href="https://www.PrivacyPolicies.com/cookie-consent/">Cookie Consent by PrivacyPolicies.com</a></noscript>
+
 </head>
