--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -59,14 +59,32 @@ layout: default
       {% if site.twitter_username and site.disqus_account %}
       <div class="content-panel feedback">
         Feel free to reach out to me at <a href="http://www.twitter.com/{{ site.twitter_username }}">@{{ site.twitter_username }}</a> or leave a comment below!
+        <div class="htb">
+            <br>
+            <a href="https://www.hackthebox.eu/profile/137488">
+               <img src="https://www.hackthebox.eu/badge/image/137488">
+            </a>
+        </div>
       </div>
       {% elsif site.twitter_username %}
       <div class="content-panel feedback">
         Feel free to reach out to me at <a href="http://www.twitter.com/{{ site.twitter_username }}">@{{ site.twitter_username }}</a>!
+        <div class="htb">
+            <br>
+            <a href="https://www.hackthebox.eu/profile/137488">
+               <img src="https://www.hackthebox.eu/badge/image/137488">
+            </a>
+        </div>
       </div>
       {% elsif site.disqus_account %}
       <div class="content-panel feedback">
         Feel free to reach out to me below!
+        <div class="htb">
+            <br>
+            <a href="https://www.hackthebox.eu/profile/137488">
+               <img src="https://www.hackthebox.eu/badge/image/137488">
+            </a>
+        </div>
       </div>
       {% endif %}
 
