--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -105,14 +105,32 @@ layout: default
       {% if site.twitter_username and site.disqus_account %}
       <div class="content-panel feedback">
         Follow me and let me know what you think of this article on twitter <a href="http://www.twitter.com/{{ site.twitter_username }}">@{{ site.twitter_username }}</a> or leave a comment below!
+      <div class="htb">
+          <br>
+          <a href="https://www.hackthebox.eu/profile/137488">
+             <img src="https://www.hackthebox.eu/badge/image/137488">
+          </a>
+      </div>
       </div>
       {% elsif site.twitter_username %}
       <div class="content-panel feedback">
         Follow me and let me know what you think of this article on twitter <a href="http://www.twitter.com/{{ site.twitter_username }}">@{{ site.twitter_username }}</a>!
+        <div class="htb">
+            <br>
+            <a href="https://www.hackthebox.eu/profile/137488">
+               <img src="https://www.hackthebox.eu/badge/image/137488">
+            </a>
+        </div>
       </div>
       {% elsif site.disqus_account %}
       <div class="content-panel feedback">
         Let me know what you think of this article in the comment section below!
+        <div class="htb">
+            <br>
+            <a href="https://www.hackthebox.eu/profile/137488">
+               <img src="https://www.hackthebox.eu/badge/image/137488">
+            </a>
+        </div>
       </div>
       {% endif %}
 
