--- a/css/style.scss
+++ b/css/style.scss
@@ -905,3 +905,18 @@ td{
     padding: 2px;
     border:1px solid $dark-blue;;
 }
+
+.blink {
+	animation: blink 2s steps(5, start) infinite;
+	-webkit-animation: blink 2s steps(5, start) infinite;
+  }
+  @keyframes blink {
+	to {
+	  visibility: hidden;
+	}
+  }
+  @-webkit-keyframes blink {
+	to {
+	  visibility: hidden;
+	}
+  }
