--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?28505657');
-  src: url('../font/fontello.eot?28505657#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?28505657') format('woff2'),
-       url('../font/fontello.woff?28505657') format('woff'),
-       url('../font/fontello.ttf?28505657') format('truetype'),
-       url('../font/fontello.svg?28505657#fontello') format('svg');
+  src: url('../font/fontello.eot?30649874');
+  src: url('../font/fontello.eot?30649874#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?30649874') format('woff2'),
+       url('../font/fontello.woff?30649874') format('woff'),
+       url('../font/fontello.ttf?30649874') format('truetype'),
+       url('../font/fontello.svg?30649874#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?28505657#fontello') format('svg');
+    src: url('../font/fontello.svg?30649874#fontello') format('svg');
   }
 }
 */
@@ -56,3 +56,4 @@
 }
  
 .icon-hackerone:before { content: '\e800'; } /* '' */
+.icon-hackthebox:before { content: '\e803'; } /* '' */
