adding google adsense header

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -57,6 +57,8 @@
 <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 {% endif %}
 
+<script data-ad-client="ca-pub-1349331648978464" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
 <!-- Cookie Consent by https://www.PrivacyPolicies.com -->
 <script type="text/javascript" src="//www.privacypolicies.com/public/cookie-consent/3.0.0/cookie-consent.js"></script>
 <script type="text/javascript">
