--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,6 +5,7 @@
     <ul class="pages">
       <li><a href="{{ site.baseurl }}/"><i class="fa fa-home"></i> Home</a></li>
       <li><a href="{{ site.baseurl }}/about/"><i class="fa fa-address-card"></i> About</a></li>
+      <li><a href="{{ site.baseurl }}/projects/"><i class="fa fa-address-card"></i> Projects</a></li>
       <li><a href="{{ site.baseurl }}/posts/"><i class="fa fa-archive"></i> All Posts</a></li>
       <li><a href="{{ site.baseurl }}/search/"><i class="fa fa-search"></i> Search</a></li>
     </ul>
