QuantumComputing Hello World post golive

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -68,4 +68,9 @@ cookieconsent.run({"notice_banner_type":"headline","consent_type":"express","pal
 </script>
 <noscript><a href="https://www.PrivacyPolicies.com/cookie-consent/">Cookie Consent by PrivacyPolicies.com</a></noscript>
 
+<!-- Mathjax Support -->
+<script type="text/javascript" async
+  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+</script>
+
 </head>
