SEO Optimization Tweaks

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
       <li><a href="{{ site.baseurl }}/about/"><i class="fa fa-address-card"></i> About</a></li>
       <li><a href="{{ site.baseurl }}/projects/"><i class="fa fa-beer"></i> Projects</a></li>
       <li><a href="{{ site.baseurl }}/posts/"><i class="fa fa-archive"></i> All Posts</a></li>
-      <li><a href="{{ site.baseurl }}/search/"><i class="fa fa-search"></i> Search</a></li>
+      <!--<li><a href="{{ site.baseurl }}/search/"><i class="fa fa-search"></i> Search</a></li>-->
     </ul>
 
     {% include social_links.html %}
