--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,7 @@ layout: default
       </div>
       {% endif %}
 
-      <h1 class="header" itemprop="name">{{ page.title }}</h1>
+      <h1 class="header" itemprop="name">{{ page.title2 }}</h1>
 
       <div class="author">
         <small><i>
