--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -21,19 +21,27 @@ layout: default
 
       {% if site.twitter_username and site.disqus_account %}
       <div class="content-panel feedback">
-        Feel free to reach out to me at <a href="http://www.twitter.com/{{ site.twitter_username }}">@{{ site.twitter_username }}</a> or leave a comment below!
+        Follow me and let me know what you think of this article on twitter!
+        <br><br>
+        <a href="https://twitter.com/_PatrickDowning?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-count="false">Follow @_PatrickDowning</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <div class="htb">
             <br>
             <a href="https://www.hackthebox.eu/profile/137488">
                <img src="https://www.hackthebox.eu/badge/image/137488">
             </a>
+        </div>
       </div>
       {% elsif site.twitter_username %}
       <div class="content-panel feedback">
-        Feel free to reach out to me at <a href="http://www.twitter.com/{{ site.twitter_username }}">@{{ site.twitter_username }}</a>!
+        Follow me and let me know what you think of this article on twitter!
+        <br><br>
+        <a href="https://twitter.com/_PatrickDowning?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-count="false">Follow @_PatrickDowning</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <div class="htb">
             <br>
             <a href="https://www.hackthebox.eu/profile/137488">
                <img src="https://www.hackthebox.eu/badge/image/137488">
             </a>
+        </div>
       </div>
       {% elsif site.disqus_account %}
       <div class="content-panel feedback">
