--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -50,7 +50,16 @@ layout: default
         <small>
           {{ minutes }} minute read
         </small>
+        {% if page.tags and page.tags.size > 0 %}
+        <div class="tags">
+          <small>
+          <i class="fa fa-tags"></i>
+            {{ page.tags | join: ', ' }}
+          </small>
+        </div>
+        {% endif %}
       </div>
+      
 
       <div class="content-panel content">
 
@@ -91,21 +100,14 @@ layout: default
         </div>
         {% endif %}
 
-        {% if page.tags and page.tags.size > 0 %}
-        <div class="tags">
-          <small>
-          <i class="fa fa-tags"></i>
-            {{ page.tags | join: ', ' }}
-          </small>
-        </div>
-        {% endif %}
-
       </div>
 
       {% if site.twitter_username and site.disqus_account %}
       <div class="content-panel feedback">
-        Follow me and let me know what you think of this article on twitter <a href="http://www.twitter.com/{{ site.twitter_username }}">@{{ site.twitter_username }}</a> or leave a comment below!
-      <div class="htb">
+        Follow me and let me know what you think of this article on twitter!
+        <br><br>
+        <a href="https://twitter.com/_PatrickDowning?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-count="false">Follow @_PatrickDowning</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <div class="htb">
           <br>
           <a href="https://www.hackthebox.eu/profile/137488">
              <img src="https://www.hackthebox.eu/badge/image/137488">
@@ -114,7 +116,9 @@ layout: default
       </div>
       {% elsif site.twitter_username %}
       <div class="content-panel feedback">
-        Follow me and let me know what you think of this article on twitter <a href="http://www.twitter.com/{{ site.twitter_username }}">@{{ site.twitter_username }}</a>!
+        Follow me and let me know what you think of this article on twitter!
+        <br><br>
+        <a href="https://twitter.com/_PatrickDowning?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-count="false">Follow @_PatrickDowning</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         <div class="htb">
             <br>
             <a href="https://www.hackthebox.eu/profile/137488">
