Wording update on Twitter button About page

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -21,7 +21,7 @@ layout: default
 
       {% if site.twitter_username and site.disqus_account %}
       <div class="content-panel feedback">
-        Follow me and let me know what you think of this article on twitter!
+        Follow me on twitter!
         <br><br>
         <a href="https://twitter.com/_PatrickDowning?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-count="false">Follow @_PatrickDowning</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         <div class="htb">
@@ -33,7 +33,7 @@ layout: default
       </div>
       {% elsif site.twitter_username %}
       <div class="content-panel feedback">
-        Follow me and let me know what you think of this article on twitter!
+        Follow me on twitter!
         <br><br>
         <a href="https://twitter.com/_PatrickDowning?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-count="false">Follow @_PatrickDowning</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         <div class="htb">
