SEO og/twitter header and typo fix

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,17 @@
 <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 <meta name="description" content="{{ page.summary }}">
 <meta name="keywords" content="{{ page.keywords }}">
+<link rel="canonical" href="{{ page.canon }}" />
+
+<meta name="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
+<meta name="twitter:description" content="{{ page.summary | strip_html | truncatewords:20 }}">
+<meta name="twitter:image" content="{{ page.thumbnail }}">
+<meta name="twitter:card" content="summary_large_image">
+
+<meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
+<meta property="og:description" content="{{ page.summary | strip_html | truncatewords:20 }}">
+<meta property="og:image" content="{{ page.thumbnail }}">
+<meta property="og:url" content="{{ page.canon }}">
 
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
