Postman go-live + social configs

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -1,5 +1,10 @@
 ---
 layout: default
+title: Padraignix's InfoSec Blog - About Me
+summary: Personal blog covering CTF events, Security Infrastructure, Cryptography, Emulator development, Quantum Technology and related adventures
+keywords: hacking, blog,information security,infosec,hackthebox,quantum computing,quantum technology,emulation,emulators,reverse engineering
+thumbnail:  https://github.com/padraignix.png
+canon:      https://padraignix.github.io/about/
 ---
 <div class="container-fluid single">
   <div class="row">
