--- a/css/style.scss
+++ b/css/style.scss
@@ -201,6 +201,10 @@ ul {
 		color: $dark-green;
 	}
 
+	.fa-twitch:hover {
+		color: $medium-purple;
+	}
+
 	.fa-github:hover {
 		color: $github;
 	}
