--- a/_includes/social_links.html
+++ b/_includes/social_links.html
@@ -1,6 +1,7 @@
 <p class="links">
   {% if site.twitter_username %}<a href="https://www.twitter.com/{{ site.twitter_username }}" target="_new"><i class="fa fa-twitter"></i></a>{% endif %}
   {% if site.linkedin_link %}<a href="{{ site.linkedin_link }}" target="_new"><i class="fa fa-linkedin"></i></a>{% endif %}
+  {% if site.reddit_username %}<a href="https://reddit.com/user/{{ site.reddit_username }}" target="_new"><i class="fa fa-reddit-alien"></i></a>{% endif %}
   {% if site.xing_link %}<a href="{{ site.xing_link }}" target="_new"><i class="fa fa-xing"></i></a>{% endif %}
   {% if site.google_plus_link %}<a href="{{ site.google_plus_link }}" target="_new"><i class="fa fa-google-plus"></i></a>{% endif %}
   {% if site.facebook_link %}<a href="{{ site.facebook_link }}" target="_new"><i class="fa fa-facebook"></i></a>{% endif %}
@@ -8,6 +9,7 @@
   {% if site.stackoverflow_link %}<a href="{{ site.stackoverflow_link }}" target="_new"><i class="fa fa-stack-overflow"></i></a>{% endif %}
   {% if site.instagram_username %}<a href="https://www.instagram.com/{{ site.instagram_username }}" target="_new"><i class="fa fa-instagram"></i></a>{% endif %}
   {% if site.hackerone_username %}<a href="https://hackerone.com/{{ site.hackerone_username }}" target="_new"><i class="icon-hackerone"></i></a>{% endif %}
+  {% if site.twitch_username %}<a href="https://twitch.tv/{{ site.twitch_username }}" target="_new"><i class="fa fa-twitch"></i></a>{% endif %}
   {% if site.hackthebox_username %}<a href="https://www.hackthebox.eu/profile/{{ site.hackthebox_username }}" target="_new"><i class="icon-hackthebox"></i></a>{% endif %}
   <a href="{{ site.baseurl }}/feed.xml" target="_new"><i class="fa fa-rss"></i></a>
 </p>
