Formatting on allposts page
Including twities for by category

--- a/css/style.scss
+++ b/css/style.scss
@@ -315,6 +315,12 @@ ul {
 			font-size: 26px;
 		}
 
+		summary {
+			margin-bottom: 30px;
+			color: $dark-green;
+			font-size: 26px;
+		}
+
 		ul {
 
 			padding: 0px;
