Brave Rewards Banner update

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -26,35 +26,26 @@ canon:      https://padraignix.github.io/about/
 
       {% if site.twitter_username and site.disqus_account %}
       <div class="content-panel feedback">
-        Follow me on twitter!
-        <br><br>
         <a href="https://twitter.com/_PatrickDowning?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-count="false">Follow @_PatrickDowning</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        <!--<div class="htb">
-            <br>
-            <a href="https://www.hackthebox.eu/profile/137488">
-               <img src="https://www.hackthebox.eu/badge/image/137488">
-            </a>
-        </div>-->
+        <br><br>Join me in using Brave Browser!<br><br>
+        <a href="https://brave.com/pad931">
+          <img width="30%" height="30%" src="{{ '/assets/org-in-a-box/bravebrowser.png' | relative_url }}" alt="Join me in using Brave Browser!">
+        </a>
       </div>
       {% elsif site.twitter_username %}
       <div class="content-panel feedback">
-        Follow me on twitter!
-        <br><br>
         <a href="https://twitter.com/_PatrickDowning?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-count="false">Follow @_PatrickDowning</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        <!--<div class="htb">
-            <br>
-            <a href="https://www.hackthebox.eu/profile/137488">
-               <img src="https://www.hackthebox.eu/badge/image/137488">
-            </a>
-        </div>-->
+        <br><br>Join me in using Brave Browser!<br><br>
+        <a href="https://brave.com/pad931">
+          <img width="30%" height="30%" src="{{ '/assets/org-in-a-box/bravebrowser.png' | relative_url }}" alt="Join me in using Brave Browser!">
+        </a>
       </div>
       {% elsif site.disqus_account %}
       <div class="content-panel feedback">
-        Feel free to reach out to me below!
-            <br>
-            <a href="https://www.hackthebox.eu/profile/137488">
-               <img src="https://www.hackthebox.eu/badge/image/137488">
-            </a>
+        <br><br>Join me in using Brave Browser!<br><br>
+        <a href="https://brave.com/pad931">
+          <img width="30%" height="30%" src="{{ '/assets/org-in-a-box/bravebrowser.png' | relative_url }}" alt="Join me in using Brave Browser!">
+        </a>
       </div>
       {% endif %}
 
