--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -109,27 +109,21 @@ layout: default
         <a href="https://twitter.com/_PatrickDowning?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-count="false">Follow @_PatrickDowning</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         <div class="htb">
           <br>
-          <a href="https://www.hackthebox.eu/profile/137488">
-             <img src="https://www.hackthebox.eu/badge/image/137488" alt="Hack The Box">
+          Join me in using Brave Browser!
+          <a href="https://brave.com/pad931"><br><br>
+            <img width="30%" height="30%"src="{{ '/assets/org-in-a-box/bravebrowser.png' | relative_url }}" alt="Join me in using Brave Browser!">
           </a>
-          <!--<a href="https://www.hackthebox.eu/home/teams/profile/2535">
-            <img src="https://www.hackthebox.eu/badge/team/image/2535" alt="Hack The Box">
-          </a>-->
       </div>
       </div>
       {% elsif site.twitter_username %}
       <div class="content-panel feedback">
-        Follow me and let me know what you think of this article on twitter!
-        <br><br>
         <a href="https://twitter.com/_PatrickDowning?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-count="false">Follow @_PatrickDowning</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         <div class="htb">
             <br>
-            <a href="https://www.hackthebox.eu/profile/137488">
-               <img src="https://www.hackthebox.eu/badge/image/137488" alt="Hack The Box">
+            Join me in using Brave Browser!<br><br>
+            <a href="https://brave.com/pad931">
+               <img width="30%" height="30%" src="{{ '/assets/org-in-a-box/bravebrowser.png' | relative_url }}" alt="Join me in using Brave Browser!">
             </a>
-            <!--<a href="https://www.hackthebox.eu/home/teams/profile/2535">
-              <img src="https://www.hackthebox.eu/badge/team/image/2535" alt="Hack The Box">
-            </a>-->
         </div>
       </div>
       {% elsif site.disqus_account %}
@@ -137,12 +131,10 @@ layout: default
         Let me know what you think of this article in the comment section below!
         <div class="htb">
             <br>
-            <a href="https://www.hackthebox.eu/profile/137488">
-               <img src="https://www.hackthebox.eu/badge/image/137488">
+            Join me in using Brave Browser!<br><br>
+            <a href="https://brave.com/pad931">
+              <img width="30%" height="30%" src="{{ '/assets/org-in-a-box/bravebrowser.png' | relative_url }}" alt="Join me in using Brave Browser!">
             </a>
-            <!--<a href="https://www.hackthebox.eu/home/teams/profile/2535">
-              <img src="https://www.hackthebox.eu/badge/team/image/2535" alt="Hack The Box">
-            </a>-->
         </div>
       </div>
       {% endif %}
