lightbox image functionality addition

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,6 +24,20 @@
    });
 </script>
 
+<script type="text/javascript" src="/js/lightbox.js"></script>
+<link rel="stylesheet" href="/css/lightbox.css">
+
+      <!-- LICENSE 
+      <section id="license" class="license-section">
+        <h2>License</h2>
+        <p>Lightbox2 is licensed under <a href="https://raw.githubusercontent.com/lokesh/lightbox2/master/LICENSE">The MIT License</a>.</p>
+        <ul>
+          <li><strong>100% Free.</strong> Lightbox is free to use in both commercial and non-commercial work.</li>
+          <li><strong>Attribution is required. </strong>This means you must leave my name, my homepage link, and the license info intact. None of these items have to be user-facing and can remain within the code.</li>
+        </ul>
+      </section>
+      -->
+
 {% if page.make-smaller-titles %}
 <script type="text/javascript">
 
