--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -58,7 +58,6 @@ layout: page
     </div>
     <div class="post-content">
       <p>
-        
         {% if post.summary %}
           {{ post.summary | strip_html | truncatewords:100 }}
         {% else %}
@@ -71,6 +70,21 @@ layout: page
       <!-- posted date -->
       <i class="far fa-clock fa-fw"></i>
       {% include timeago.html date=post.date tooltip=true %}
+
+      <!-- time to read -->
+      <i class="far fa-clock fa-fw"></i>
+      {% include read-time.html content=post.content %}
+
+      <!-- categories -->
+      {% if post.categories.size > 0 %}
+        <i class="far fa-folder-open fa-fw"></i>
+        <span>
+        {% for category in post.categories %}
+          {{ category }}
+          {%- unless forloop.last -%},{%- endunless -%}
+        {% endfor %}
+        </span>
+      {% endif %}
 
       <!-- page views -->
       {% if site.google_analytics.pv.enabled %}
