--- a/assets/css/categories.scss
+++ b/assets/css/categories.scss
@@ -18,6 +18,7 @@
   margin-bottom: 2rem;
   .card-header {
     padding-right: 12px;
+    border-radius: 20px;
   }
   .list-group-item {
     border-left: none;
