--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -47,16 +47,14 @@ layout: page
 <div id="post-list">
 
 {% for post in posts %}
-
+<a href="{{ post.url | relative_url }}">
   <div class="post-preview">
     <div class="d-flex justify-content-between pr-xl-2">
-      <h1><a href="{{ post.url | relative_url }}">{{ post.title }}</a></h1>
-      {% if post.pin == true %}
-        <i class="fas fa-thumbtack fa-fw text-muted mt-1 ml-2 mt-xl-2" data-toggle="tooltip" data-placement="left"
-        title="Pinned"></i>
-      {% endif %}
+      <h1>{{ post.title }}</h1>
+      <img width="100" height="100" src="{{ post.thumbnail }}">
     </div>
     <div class="post-content">
+      
       <p>
         {% if post.summary %}
           {{ post.summary | strip_html | truncatewords:100 }}
@@ -64,6 +62,7 @@ layout: page
           {{ post.excerpt | strip_html | truncatewords:100 }}
         {% endif %}
       </p>
+      
     </div>
 
     <div class="post-meta text-muted">
@@ -95,6 +94,7 @@ layout: page
       {% endif %}
     </div>
   </div> <!-- .post-review -->
+</a>
 
 {% endfor %}
 
