homepage rounded corner preview css

--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -23,6 +23,7 @@
   .post-preview {
     padding-top: 0.5rem;
     padding-bottom: 1rem;
+    border-radius: 10px;
     border-bottom: 1px solid var(--main-border-color);
     &:hover {
       text-decoration: none;
