SEO updates to QuantumlyConfused

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -86,7 +86,7 @@
   <script type="text/javascript" src="//www.privacypolicies.com/public/cookie-consent/3.0.0/cookie-consent.js"></script>
   <script type="text/javascript">
   document.addEventListener('DOMContentLoaded', function () {
-  cookieconsent.run({"notice_banner_type":"headline","consent_type":"express","palette":"dark","language":"en","website_name":"https://padraignix.github.io"});
+  cookieconsent.run({"notice_banner_type":"headline","consent_type":"express","palette":"dark","language":"en","website_name":"https://blog.quantumlyconfused.com"});
   });
   </script>
   <noscript><a href="https://www.PrivacyPolicies.com/cookie-consent/">Cookie Consent by PrivacyPolicies.com</a></noscript>
