Updating img alt text for htmlcheck

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -46,7 +46,7 @@ layout: page
   <div class="post-preview">
     <div class="d-flex justify-content-between pr-xl-2">
       <h1>{{ post.title }}</h1>
-      <img width="100" height="100" src="{{ post.thumbnail }}">
+      <img width="100" height="100" src="{{ post.thumbnail }}" alt="{{ post.title }}">
     </div>
 
     <div class="post-content">
