adjusting socials from twitter to mastodon

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -80,10 +80,16 @@
       {% endcapture %}
 
       {% if url %}
-      <a href="{{ url }}" aria-label="{{ entry.type }}"
-        {% unless entry.noblank %}target="_blank" rel="noopener"{% endunless %}>
-        <i class="{{ entry.icon }}"></i>
-      </a>
+        {%- if entry.type == 'mastodon' -%}
+        <a rel="me" href="{{ url }}">
+          <i class="{{ entry.icon }}"></i>
+        </a>
+        {%- else -%}
+        <a href="{{ url }}" aria-label="{{ entry.type }}"
+          {% unless entry.noblank %}target="_blank" rel="noopener"{% endunless %}>
+          <i class="{{ entry.icon }}"></i>
+        </a>
+        {% endif %}
       {% endif %}
 
     {% endfor %}
