--- a/_sass/layout/post.scss
+++ b/_sass/layout/post.scss
@@ -368,3 +368,104 @@ nav[data-toggle="toc"] {
     border-radius: 0;
   }
 }
+
+/*
+   Comments
+   ========================================================================== */
+
+@mixin clearfix {
+  clear: both;
+  
+  &::after {
+    clear: both;
+    content: "";
+    display: table;
+  }
+}
+
+  .page__comments {
+  
+  }
+  p {
+  }
+  .card {
+    border-color: var(--card-border-color);
+    background-color: var(--card-bg);
+    box-shadow: 0 0 5px 0 var(--card-box-shadow);
+    transition: all 0.3s ease-in-out;
+  }
+  
+  
+  .page__comments-title {
+    margin-top: 2rem;
+    margin-bottom: 10px;
+    padding-top: 2rem;
+    font-size: 1.25em; 
+    border-top: 1px solid mix(#fff, #7a8288, 90%);
+    text-transform: uppercase;
+  }
+  
+  .page__comments-form {
+    padding: 1em;
+    background: mix(#fff, #7a8288, 90%);
+    transition: all 0.2s ease-in-out;
+  
+    &.disabled {
+      input,
+      button,
+      textarea,
+      label {
+        pointer-events: none;
+        cursor: not-allowed;
+        filter: alpha(opacity=65);
+        box-shadow: none;
+        opacity: 0.65;
+      }
+    }
+  }
+  
+  .comment {
+    @include clearfix();
+    margin: 1em 0;
+  
+    &:not(:last-child) {
+      border-bottom: 1px solid mix(#fff, #7a8288, 90%);
+    }
+  }
+  
+  .comment__avatar-wrapper {
+    float: left;
+    margin-top: 25px;
+    width: 60px;
+    height: 60px;
+  
+  }
+  
+  .comment__avatar {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+  
+  }
+  
+  .comment__content-wrapper {
+    float: right;
+    width: calc(100% - 60px);
+  
+  }
+  
+  .comment__author {
+    margin: 0;
+  
+    a {
+      text-decoration: none;
+    }
+  }
+  
+  .comment__date {
+    margin: 0;
+  
+    a {
+      text-decoration: none;
+    }
+  }
