Bugfix for mastodon integration

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -147,7 +147,7 @@ tail_includes:
 
   </div><!-- .post-tail-bottom -->
 
-  {% if page.comments %}
+  {% if page.comments.id %}
     {% include fediverse_comments.html %}
   {% endif %}
 
