updating privacy practices removing cookies

--- a/_includes/google-analytics.html
+++ b/_includes/google-analytics.html
@@ -1,7 +1,7 @@
 <!--
   The GA snippet
 -->
-<!-- Global site tag (gtag.js) - Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics 
 <script defer src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics.id }}"></script>
 <script>
   document.addEventListener("DOMContentLoaded", function(event) {
@@ -11,4 +11,4 @@
     gtag('js', new Date());
     gtag('config', '{{ site.google_analytics.id }}');
   });
-</script>
+</script>-->
