--- a/_includes/head.html
+++ b/_includes/head.html
@@ -125,12 +125,12 @@
   {% endunless %}
 
 
-  <script type="text/javascript" src="//www.privacypolicies.com/public/cookie-consent/4.0.0/cookie-consent.js"></script>
+  <!-- <script type="text/javascript" src="//www.privacypolicies.com/public/cookie-consent/4.0.0/cookie-consent.js"></script>
   <script type="text/javascript">
   document.addEventListener('DOMContentLoaded', function () {
   cookieconsent.run({"notice_banner_type":"headline","consent_type":"express","palette":"dark","language":"en","website_name":"https://blog.quantumlyconfused.com","website_privacy_policy_url":"https://blog.quantumlyconfused.com/disclaimer/"});
   });
   </script>
   <noscript><a href="https://www.PrivacyPolicies.com/cookie-consent/">Cookie Consent by PrivacyPolicies.com</a></noscript>
-
+  -->
 </head>
